# sol-query

./: .gitignore  .gitmodules  CLAUDE.md  COMPLETION_SUMMARY.md  DETAILED_EXECUTION_CHECKLIST.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_PLAN.md  KNOWN_ISSUES.md  PERFORMANCE_OPTIMIZATION.md  PLAN_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_IMPROVEMENT.md  example.py  main.py  pyproject.toml
.VSCodeCounter/2025-10-01_15-19-48/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/: README.md  api-reference-v2.md  api-reference.md  architecture.md  development.md  external-call-analysis.md  getting-started.md  query-examples.md
examples/: demo.py  demo_v2.py
sol_query/: __init__.py
sol_query/analysis/: __init__.py  call_analyzer.py  call_metadata.py  call_types.py  data_flow.py  import_analyzer.py  variable_tracker.py
sol_query/core/: __init__.py  ast_builder.py  (+4 more)
tests/: __init__.py  test_basic_functionality.py  test_call_analysis_comprehensive.py  test_comprehensive_queries.py  test_contextual_analysis.py  test_contract_qualified_functions.py  test_data_flow_analysis.py  test_engine_v2_api.py  test_engine_v2_comprehensive.py  test_external_call_filters.py  test_filters_implementation.py  test_get_details_groupstaking.py  test_get_details_tokenstreamer.py  test_import_analyzer.py  test_line_content_enhancement.py  test_llm_serialization.py  test_missing_node_types.py  test_modifier_serialization.py  test_negation_filters.py  test_new_api_features.py  test_query_composition.py  test_sol_bug_bench.py
(+54 files in other folders)
